--- a/playbook.yml
+++ b/playbook.yml
@@ -6,3 +6,10 @@
   - name: Printing a Message
     debug: 
       msg: "Hello World\n"
+      
+   - name: Create files
+     file:
+      path: /root/ansible
+      state: touch
+      
+     
